adding all files git

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -25,15 +25,15 @@
     <div id="wrapper" class="flex flex-col justify-between h-screen">
 
         <!-- header-->
-        <div class="bg-white py-4 shadow dark:bg-gray-800">
+        <div class="bg-pink-600 py-4 shadow dark:bg-pink-500">
             <div class="max-w-6xl mx-auto">
 
 
                 <div class="flex items-center lg:justify-between justify-around">
 
-                    <a href="">
-                       <b><h1 style="font-size: 1.5rem;">Social Book</h1></b>
-                    </a>
+                    
+                       <b><h1 style="font-size: 1.5rem;color: azure">Friend Book</h1></b>
+                    
 
                     <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
                         
@@ -94,7 +94,7 @@
                     <a href="#"> Terms</a>
                     <a href="#"> Privacy</a>
                 </div>
-                <p class="capitalize"> © copyright 2020 by socol</p>
+                <p class="capitalize"> © copyright 2023 by Team1</p>
             </div>
         </div>
 
