--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,34 @@
     <link rel="stylesheet" href="{% static 'assets/css/tailwind.css' %}">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <style>
+        .dropdown_scrollbar {
+            max-width: 300px; /* Adjust the maximum width as needed */
+            padding: 10px; /* Adjust padding for better readability */
+            margin-top: 10px; /* Add margin to separate from the header */
+        }
+
+        .user-link {
+            display: block;
+            padding: 35px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis; /* Add ellipsis for long names */
+        }
+
+        .dropdown_scrollbar {
+            max-height: 200px; /* Set a maximum height for scrollability */
+            overflow-y: auto; /* Enable vertical scrolling */
+        }
+
+        @media (max-width: 768px) {
+            .dropdown_scrollbar {
+                max-width: 100%; /* Adjust for smaller screens */
+            }
+        }
+    </style>
+
 </head>
 
 <body>
@@ -29,7 +57,7 @@
                         <!-- Logo -->
                         <div id="logo" class=" uk-hidden@s">
                             <a href="home.html">
-                                <b><h1 style="text-transform: uppercase;">Social Book</h1></b>
+                                <b><h1 style="text-transform: uppercase;">Friend Book</h1></b>
                             </a>
                         </div>
 
@@ -64,12 +92,13 @@
     
                                 <div class="flex flex-col choose-upload text-center">
                                    
-                                    <div class="bg-gray-100 border-2 border-dashed flex flex-col h-24 items-center justify-center relative w-full rounded-lg  ">
-                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-12">
-                                            <path d="M5.5 13a3.5 3.5 0 01-.369-6.98 4 4 0 117.753-1.977A4.5 4.5 0 1113.5 13H11V9.413l1.293 1.293a1 1 0 001.414-1.414l-3-3a1 1 0 00-1.414 0l-3 3a1 1 0 001.414 1.414L9 9.414V13H5.5z" />
-                                            <path d="M9 13h2v5a1 1 0 11-2 0v-5z" />
+                                    <div class="bg-blue-100 border-2 border-dashed flex flex-col h-24 items-center justify-center relative w-full rounded-lg">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-12 text-blue-500">
+                                            <path d="M10 3a7 7 0 100 14 7 7 0 000-14zM2 10a8 8 0 1116 0 8 8 0 01-16 0z" />
+                                            <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
                                         </svg>
                                     </div>
+                                    
 
                                     <form action="upload" method="POST" enctype="multipart/form-data" >
                                     {% csrf_token %}
@@ -142,23 +171,37 @@
                             <a href="#" class="see-all">See all</a>
                         </div> -->
 
+                        
                         <!-- Messages -->
 
-                        <!-- <a href="#" class="header-links-item">
+                        <a href="#"  class="header-links-item">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="0.5em" height="0.5em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><g fill="currentColor"><path d="M2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/></g></svg>
                         </a>
                         <div uk-drop="mode: click;offset: 4" class="header_dropdown">
                             <h4
                                 class="-mt-5 -mx-5 bg-gradient-to-t from-gray-100 to-gray-50 border-b font-bold px-6 py-3">
-                                Messages </h4>
+                                 </h4>
                             <ul class="dropdown_scrollbar" data-simplebar>
-                                <li>
+                               <!-- <li>
                                     <a href="#">
-                                        <div class="drop_avatar"> <img src="{% static 'assets/images/avatars/avatar-1.jpg' %}" alt="">
+                                      <a href>List Users
+                                        <a href="/list_users/{{suggestion.user}}" 
+                                        {% include 'list_users.html' with all_users=all_users %}>
+                                        -->
+                                        <div class="user-link">  
+                                            <ul>
+                                                {% for user in all_users_message %}
+                                                  <li  >
+                                                    <a href="{% url 'message_detail' user.id %}">
+                                                      {{ user.username }}
+                                                    
+                                                  </li>
+                                                {% endfor %}
+                                              </ul>
                                         </div>
                                         <div class="drop_content">
-                                            <strong> Taiye </strong> <time> 6:43 PM</time>
-                                            <p> hi tomi </p>
+                                            
+                                            
                                         </div>
                                     </a>
                                 </li>
@@ -166,8 +209,8 @@
 
 
                             </ul>
-                            <a href="#" class="see-all">See all</a>
-                        </div> -->
+                           <!--<a href="#" class="see-all">See all</a>--> 
+                        </div> 
 
                         <!-- profile -->
 
