--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <style>
+        
+        .drop_content {
+            flex: 1;
+            padding: 10px;
+        }
         .dropdown_scrollbar {
             max-width: 300px; /* Adjust the maximum width as needed */
             padding: 10px; /* Adjust padding for better readability */
@@ -174,7 +179,9 @@
                         
                         <!-- Messages -->
 
-                        <a href="#"  class="header-links-item">
+                         <!-- Messages -->
+
+                         <a href="#"  class="header-links-item">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="0.5em" height="0.5em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><g fill="currentColor"><path d="M2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/></g></svg>
                         </a>
                         <div uk-drop="mode: click;offset: 4" class="header_dropdown">
@@ -188,10 +195,10 @@
                                         <a href="/list_users/{{suggestion.user}}" 
                                         {% include 'list_users.html' with all_users=all_users %}>
                                         -->
-                                        <div class="user-link">  
+                                        <div class="user-link"> All Users 
                                             <ul>
                                                 {% for user in all_users_message %}
-                                                  <li  >
+                                                  <li >
                                                     <a href="{% url 'message_detail' user.id %}">
                                                       {{ user.username }}
                                                     
@@ -202,13 +209,15 @@
                                         <div class="drop_content">
                                             
                                             
+                                            <div class="drop_content">
+                                                <h5>Your Messages</h5>
+                                                <ul>
+                                                    {% for message in user_messages %}
+                                                        <li>{{ message.content }}</li>
+                                                    {% endfor %}
+                                                </ul>
+                                            </div>
                                         </div>
-                                    </a>
-                                </li>
-                                
-
-
-                            </ul>
                            <!--<a href="#" class="see-all">See all</a>--> 
                         </div> 
 
@@ -220,7 +229,9 @@
                         <div uk-drop="mode: click;offset:9" class="header_dropdown profile_dropdown border-t">
                             <ul>
                                 <li><a href="/settings"> Account setting </a> </li>
+                                <li><a href="/profile/{{user_profile.user}}">My Profile</a></li>
                                 <li><a href="logout"> Log Out</a></li>
+
                             </ul>
                         </div>
 
@@ -282,7 +293,7 @@
                                       </li> -->
                                       <li> 
                                           <a href="#" class="flex items-center px-3 py-2 text-red-500 hover:bg-red-100 hover:text-red-500 rounded-md ">
-                                           <i class="uil-trash-alt mr-1"></i>  Delete Post
+                                           <i class="uil-trash-alt mr-1"></i>  
                                           </a> 
                                       </li>
                                     </ul>
