--- a/templates/signin.html
+++ b/templates/signin.html
@@ -89,12 +89,12 @@
         <div class="lg:mb-5 py-3 uk-link-reset">
             <div class="flex flex-col items-center justify-between lg:flex-row max-w-6xl mx-auto lg:space-y-0 space-y-3">
                 <div class="flex space-x-2 text-gray-700 uppercase">
-                    <a href="#"> About</a>
-                    <a href="#"> Help</a>
+                    <a href="#"> About Us</a>
+                    
                     <a href="#"> Terms</a>
-                    <a href="#"> Privacy</a>
+                    
                 </div>
-                <p class="capitalize"> © copyright 2023 by Team1</p>
+                <p class="capitalize"> © copyright 2023 by TEAM ONE</p>
             </div>
         </div>
 
